syntax = "proto3";

option java_package = "io.grpc";
option java_outer_classname = "UniKeyQue";
option java_multiple_files = true;

// package query;

service UniKeyQueSrv {
	rpc queryUniqueKey(UniKeyQueReq) returns (UniKeyQueResp) {}
}

message UniKeyQueReq {
	string uniKeyVal = 1;
}

message UniKeyQueResp {
	bool uniKeyExi = 1;
}